@@ -1,3 +1,14 @@
+2000-06-07  Mo DeJong  <mdejong@redhat.com>
+
+	* src/jikesapi.cpp (DefaultFileReader):
+	Added check for number of bytes read.
+	* src/option.cpp (Option): Reorder
+	declarations to make compiler happy.
+	* src/platform.cpp (IntToString, IntToWstring):
+	Avoid compiler warnings.
+	* src/stream.cpp (ProcessInputUnicode):
+	Avoid compiler warnings. Added FIXME.
+
 2000-06-06  Mo DeJong  <mdejong@redhat.com>
 
 	* configure: Regen to fix Solaris build.
